[package]
name = "hub75-sign-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
ctrlc = "3.2"
spin_sleep = "1.1"
serde = {version = "1.0", features = ["derive"]}
toml = "0.7"
dotenv = "0.15"
reqwest = {version ="0.11", features = ["blocking"]}
prost = "0.11"
prost-types = "0.11"

[dependencies.gtfs-realtime]
path = "gtfs-realtime"